﻿v1.4.3

Mechanic Timers
* New: Added method Timer:Wait([Priority]) - Priority defaults to -1 (and is currently not calculated)
* New: Setting a Wait timer will keep the timer in the list (with elapsed time) until the next trigger. 

Rez Master
* New: Res frames can now either Cascade (Original) or Climb (New)
* Change: Converted to new Rift 2.2 API Event system.
* Change: Now uses Safes Table Library (LibSata) for all sorting and updating.

Endless Eclipse
* Progenitor Saetos
** Fixed: Enabled the Percentage Monitor to fire for the final two.

Frozen Tempest
* Kolmasveli & Toinenveli
** Change: Removed the timer stops for Glimpse at 10% as they can technically be cast again.

----
v1.4.2

Rift
* Change: Requires at least Rift 2.2

General
* Fixed: Issue with rare start-up error (137)

Percentage Monitor
* Fixed: Prevented Axis errors with Percentage Monitor free resize.
* New: Added methods :SetBossLeft(BossObj) and :SetBossRight(BossObj) - Note: ID's for existing Monitors will be pulled from BossObj.Mod.ID
* New: Added optional parameter to :Create method, Manual = nil[/True] if supplied then must be started manually. (:Create(BossL, BossR, Difference[, Manual])

Ready Check
* New: Added Stellar Prismatic Wellspring (All, 60, High)
* New: Added Flaring Sigil (Mage, Cleric, 60, Medium)
* New: Added Planar Edge (Warrior, 60, Medium)
* New: Added Honed Edge (Rogue, 60, Medium)
* New: Added Lightning Sigil (Rogue, 60, Medium)

Tank-Swap
* New: Now accepts both Buff Name (buffDetails.name) and BTID as valid buffs (buffDetails.LibSBuffType or buffDetails.type)
* New: You can now scale the Width/Height of the Tank-Swap monitor (Text will adjust to the smallest scale automatically when scaling only one dimension).

LibSBuff
* Change: Now converted over to new Rift 2.2 API Event system.

LibSUnit
* Change: Now uses LibUnitChange v1.3

Triggers